fix: inputs spacing on tablet

--- a/index.css
+++ b/index.css
@@ -210,6 +210,9 @@ textarea:required:invalid {
     display: flex;
     flex-direction: column;
   }
+  form > * {
+    margin: .5rem 0;
+  }
 }
 
 
